--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY=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
+SENDGRID_KEY=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
