--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SENDGRID_KEY=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
+PORT_NO=5000
+SECRET_KEY=Once again Bittu wins cutest dog!
